--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,12 +18,12 @@
 <body>
 
   <main>
-    <img id="smallBg" class="backGroundImage" src="images/backGroundSnow.jpg" alt="background image">
-    <img id="bigBg" class="backGroundImage" src="images/backGroundSnowMedium.jpg" alt="background image">
+    <img id="smallBg" class="backGroundImage" src=<%= backGrounds.small %> alt="background image">
+    <img id="bigBg" class="backGroundImage" src=<%= backGrounds.big %> alt="background image">
 
     <div class="content">
 
-      <form action="/search" method="post">
+      <form method="post" action="/weather">
         <input type="text" name="search" placeholder="Your city">
         <button type="submit">
           <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-search" viewBox="0 0 16 16">
@@ -33,44 +33,32 @@
       </form>
 
       <div class="weatherInfoNow">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-cloud-lightning-rain" viewBox="0 0 16 16">
-          <path d="M2.658 11.026a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-7.5 1.5a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-.753-8.499a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1zM7.053 11.276A.5.5 0 0 1 7.5 11h1a.5.5 0 0 1 .474.658l-.28.842H9.5a.5.5 0 0 1 .39.812l-2 2.5a.5.5 0 0 1-.875-.433L7.36 14H6.5a.5.5 0 0 1-.447-.724l1-2z" />
-        </svg>
+        <% let iconUrl = `https://openweathermap.org/img/wn/${todaysWeather.weather[0].icon}.png`; %>
+        <img src=<%= iconUrl %> alt="weather icon">
         <span>
-          <p class="city">Zagreb</p>
-          <p class="date">03.08.2023</p>
-          <p class="temp"> 25 &deg;C </p>
+          <p class="description"> <%= todaysWeather.weather[0].description %> </p>
+          <p class="city"> <%= todaysWeather.name %> </p>
+          <p class="date"> <%= todaysWeather.time %> </p>
+          <p class="temp"> <%= todaysWeather.main.temp %> &deg;C </p>
         </span>
       </div>
 
 
-
       <div class="weatherPerDays">
 
-        <div class="weatherDay">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-cloud-lightning-rain" viewBox="0 0 16 16">
-            <path d="M2.658 11.026a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-7.5 1.5a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-.753-8.499a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1zM7.053 11.276A.5.5 0 0 1 7.5 11h1a.5.5 0 0 1 .474.658l-.28.842H9.5a.5.5 0 0 1 .39.812l-2 2.5a.5.5 0 0 1-.875-.433L7.36 14H6.5a.5.5 0 0 1-.447-.724l1-2z" />
-          </svg>
-          <p class="date">03.08.2023</p>
-        </div>
+        <% for(let fw of futureWeather) { %>
 
         <div class="weatherDay">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-cloud-lightning-rain" viewBox="0 0 16 16">
-            <path d="M2.658 11.026a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-7.5 1.5a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-.753-8.499a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1zM7.053 11.276A.5.5 0 0 1 7.5 11h1a.5.5 0 0 1 .474.658l-.28.842H9.5a.5.5 0 0 1 .39.812l-2 2.5a.5.5 0 0 1-.875-.433L7.36 14H6.5a.5.5 0 0 1-.447-.724l1-2z" />
-          </svg>
-          <p class="date">03.08.2023</p>
+          <% let iconUrl = `https://openweathermap.org/img/wn/${fw.weather[0].icon}.png`; %>
+          <img src=" <%= iconUrl %> " alt="weather icon">
+          <p class="description"> <%= fw.weather[0].description %> </p>
+          <p class="date"> <%= fw.dt_txt %> </p>
         </div>
 
-
-        <div class="weatherDay">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-cloud-lightning-rain" viewBox="0 0 16 16">
-            <path d="M2.658 11.026a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-7.5 1.5a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm9.5 0a.5.5 0 0 1 .316.632l-.5 1.5a.5.5 0 1 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.316zm-.753-8.499a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1zM7.053 11.276A.5.5 0 0 1 7.5 11h1a.5.5 0 0 1 .474.658l-.28.842H9.5a.5.5 0 0 1 .39.812l-2 2.5a.5.5 0 0 1-.875-.433L7.36 14H6.5a.5.5 0 0 1-.447-.724l1-2z" />
-          </svg>
-          <p class="date">03.08.2023</p>
-        </div>
-
+        <% } %>
 
       </div>
+      
 
     </div>
 
@@ -83,9 +71,6 @@
 
   <!--js scripts-->
   <script src="js/index.js"></script>
-
-  <!--box icons-->
-  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
   <!--bootstrap js-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
